--- a/chat-req-res/Cargo.toml
+++ b/chat-req-res/Cargo.toml
@@ -6,5 +6,6 @@ edition = "2024"
 [dependencies]
 futures = { workspace = true }
 libp2p = { workspace = true }
+serde = { workspace = true }
 tokio = { workspace = true }
 tracing-subscriber = { workspace = true }
