--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ members = [
 ]
 
 [workspace.dependencies]
+anyhow = "1.0.100"
 futures = "0.3.31"
 libp2p = { version = "0.56.0", features = ["tokio", "gossipsub", "mdns", "noise", "macros", "tcp", "yamux", "quic", "ping", "request-response", "cbor"] }
 serde = { version = "1.0", features = ["derive"] }
